Added pip information and link to new version of preprint

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -33,6 +33,17 @@
     "\n",
     "For all installations, we recommend using `conda` to get the necessary `rdkit` and `tmap` dependencies:\n",
     "\n",
+    "### From pypi\n",
+    "\n",
+    "```console\n",
+    "conda create -n rxnfp python=3.6 -y\n",
+    "conda activate rxnfp\n",
+    "conda install -c rdkit rdkit\n",
+    "conda install -c tmap tmap\n",
+    "pip install rxnfp\n",
+    "```\n",
+    "\n",
+    "\n",
     "### From github\n",
     "```console\n",
     "conda create -n rxnfp python=3.6 -y\n",
@@ -129,7 +140,7 @@
     "\n",
     "### Schneider 50k set\n",
     "\n",
-    "In the notebooks, we show how to generate an interative reaction atlas for the Schneider 50k set. The end result is similar to this **[interactive Reaction Atlas](./tmaps/tmap_ft_10k.html)**.\n",
+    "In the notebooks, we show how to generate an interative reaction atlas for the Schneider 50k set. The end result is similar to this **[interactive Reaction Atlas](https://rxn4chemistry.github.io/rxnfp//tmaps/tmap_ft_10k.html)**.\n",
     "\n",
     "Where you will find different reaction properties highlighted in the different layers:\n",
     "\n",
@@ -145,14 +156,16 @@
    "source": [
     "## Citation \n",
     "\n",
+    "Our work was first presented in the NeurIPS 2019 workshop for [Machine Learning and the Physical Sciences](https://ml4physicalsciences.github.io), the most recent version can be found on [ChemRxiv](https://chemrxiv.org/articles/Data-Driven_Chemical_Reaction_Classification_with_Attention-Based_Neural_Networks/9897365\n",
+    "\n",
     "```\n",
     "@article{Schwaller2019rxnfp,\n",
-    "author = \"Philippe Schwaller and Daniel Probst and Alain C. Vaucher and Vishnu H Nair and Teodoro Laino and Jean-Louis Reymond\",\n",
-    "title = \"{Data-Driven Chemical Reaction Classification, Fingerprinting and Clustering using Attention-Based Neural Networks}\",\n",
+    "author = \"Philippe Schwaller and Daniel Probst and Alain C. Vaucher and Vishnu H Nair and David Kreutter and Teodoro Laino and Jean-Louis Reymond\",\n",
+    "title = \"{Mapping the Space of Chemical Reactions using Attention-Based Neural Networks}\",\n",
     "year = \"2019\",\n",
-    "month = \"12\",\n",
+    "month = \"9\",\n",
     "url = \"https://chemrxiv.org/articles/preprint/Data-Driven_Chemical_Reaction_Classification_with_Attention-Based_Neural_Networks/9897365\",\n",
-    "doi = \"10.26434/chemrxiv.9897365.v2\"\n",
+    "doi = \"10.26434/chemrxiv.9897365.v3\"\n",
     "}\n",
     "```\n",
     "\n",
