--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -50,6 +50,8 @@
     "conda activate rxnfp\n",
     "conda install -c rdkit rdkit\n",
     "conda install -c tmap tmap\n",
+    "git clone git@github.com:rxn4chemistry/rxnfp.git\n",
+    "cd rxnfp\n",
     "pip install -e .\n",
     "```"
    ]
@@ -131,14 +133,13 @@
     "The fingerprints can be used to map the space of chemical reactions:\n",
     "\n",
     "\n",
-    "\n",
     "<div style=\"text-align: center\">\n",
     "<img src='images/annotated_atlas.jpg' width='1000'>\n",
-    "<p style=\"text-align: center;\"> <b>Figure:</b> Annotated Atlas of the Pistachio test set generated with TMAP (https://tmap.gdb.tools). </p>\n",
+    "<p style=\"text-align: center;\"> <b>Figure:</b> Annotated Atlas of the Pistachio test set generated with <a href=\"https://tmap.gdb.tools\">TMAP</a>. </p>\n",
     "</div>\n",
     "\n",
     "\n",
-    "### Schneider 50k set\n",
+    "### Schneider 50k set - tutorial\n",
     "\n",
     "In the notebooks, we show how to generate an interative reaction atlas for the Schneider 50k set. The end result is similar to this **[interactive Reaction Atlas](https://rxn4chemistry.github.io/rxnfp//tmaps/tmap_ft_10k.html)**.\n",
     "\n",
@@ -156,7 +157,7 @@
    "source": [
     "## Citation \n",
     "\n",
-    "Our work was first presented in the NeurIPS 2019 workshop for [Machine Learning and the Physical Sciences](https://ml4physicalsciences.github.io), the most recent version can be found on [ChemRxiv](https://chemrxiv.org/articles/Data-Driven_Chemical_Reaction_Classification_with_Attention-Based_Neural_Networks/9897365\n",
+    "Our work was first presented in the NeurIPS 2019 workshop for [Machine Learning and the Physical Sciences](https://ml4physicalsciences.github.io). The most recent version of our preprint can be found on [ChemRxiv](https://chemrxiv.org/articles/Data-Driven_Chemical_Reaction_Classification_with_Attention-Based_Neural_Networks/9897365).\n",
     "\n",
     "```\n",
     "@article{Schwaller2019rxnfp,\n",
@@ -171,6 +172,13 @@
     "\n",
     "RXNFP has been developed in a collaboration between IBM Research Europe and the [Reymond group](http://gdb.unibe.ch) at the University of Bern. The classification models are used on the [RXN for Chemistry](https://rxn.res.ibm.com) platform."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
