MLM and classification tutorial, USPTO 1k TPL data set, new results

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -38,8 +38,8 @@
     "```console\n",
     "conda create -n rxnfp python=3.6 -y\n",
     "conda activate rxnfp\n",
-    "conda install -c rdkit rdkit\n",
-    "conda install -c tmap tmap\n",
+    "conda install -c rdkit rdkit=2020.03.3 -y\n",
+    "conda install -c tmap tmap -y\n",
     "pip install rxnfp\n",
     "```\n",
     "\n",
@@ -48,8 +48,8 @@
     "```console\n",
     "conda create -n rxnfp python=3.6 -y\n",
     "conda activate rxnfp\n",
-    "conda install -c rdkit rdkit\n",
-    "conda install -c tmap tmap\n",
+    "conda install -c rdkit rdkit=2020.03.3 -y\n",
+    "conda install -c tmap tmap -y\n",
     "git clone git@github.com:rxn4chemistry/rxnfp.git\n",
     "cd rxnfp\n",
     "pip install -e .\n",
@@ -148,7 +148,13 @@
     "<div style=\"text-align: center\">\n",
     "<img src='images/tmap_properties.jpg' width='800'>\n",
     "<p style=\"text-align: center;\"> <b>Figure:</b> Reaction atlas of 50k data set with different properties highlighted. </p>\n",
-    "</div>"
+    "</div>\n",
+    "\n",
+    "## USPTO 1k TPL (reaction classification data set)\n",
+    "\n",
+    "We introduce a new data set for chemical reaction classification called USPTO 1k TPL. USPTO 1k TPL is derived from the [USPTO data base](https://figshare.com/articles/Chemical_reactions_from_US_patents_1976-Sep2016_/5104873) by Lowe. It consists of 445k reactions divided into 1000 template labels. The data set was randomly split into train/valid 90% and test 10%. The labels were obtained by atom-mapping the USPTO data set with [RXNMapper](http://rxnmapper.ai), then applying the [template extraction workflow](https://github.com/reymond-group/CASP-and-dataset-performance) by Thakkar et al. and finally, selecting reactions belonging to the 1000 most frequent template hashes. Those template hashes were taken as class labels. Similarly to the Pistachio data set, USPTO 1k TPL is strongly imbalanced.\n",
+    "\n",
+    "The data set can be downloaded from: [MappingChemicalReactions](https://ibm.box.com/v/MappingChemicalReactions)."
    ]
   },
   {
