fixing typos in documentation

--- a/nbs/08_training_smiles_language_model_from_scratch.ipynb
+++ b/nbs/08_training_smiles_language_model_from_scratch.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "## Track the training \n",
     "\n",
-    "Will be using wandb to keep track of our training. You can use the an account on [wandb](https://www.wandb.com) or create an own instance following the instruction in the [documentation](https://docs.wandb.com/self-hosted).\n",
+    "We will be using wandb to keep track of our training. You can use the an account on [wandb](https://www.wandb.com) or create an own instance following the instruction in the [documentation](https://docs.wandb.com/self-hosted).\n",
     "\n",
     "If you then create an `.env` file in the root folder and specify the `WANDB_API_KEY=` (and the `WANDB_BASE_URL=`), you can use dotenv to load those enviroment variables."
    ]
@@ -75,9 +75,9 @@
    "source": [
     "## Setup MLM training \n",
     "\n",
-    "Choose the hyperparameter you want and start the training. The default parameters will train a BERT model with 12 layers and 4 attention heads per layer. The training task is Masked Language Modeling (MLM), where tokens from the input reactions are randomly masked and predicted by the model given the context. \n",
+    "Choose the hyperparameters you want and start the training. The default parameters will train a BERT model with 12 layers and 4 attention heads per layer. The training task is Masked Language Modeling (MLM), where tokens from the input reactions are randomly masked and predicted by the model given the context. \n",
     "\n",
-    "After defining the config, the training is launched in 3 lines of code using our adapter written for the  [SimpleTransformers](https://simpletransformers.ai) library (based on huggingface [Transformers](https://github.com/huggingface/transformers).  \n",
+    "After defining the config, the training is launched in 3 lines of code using our adapter written for the  [SimpleTransformers](https://simpletransformers.ai) library (based on huggingface [Transformers](https://github.com/huggingface/transformers)).  \n",
     "\n",
     "To make it work you will have to install simpletransformers:\n",
     "\n",
