--- a/nbs/09_fine_tune_bert_on_uspto_1k_tpl.ipynb
+++ b/nbs/09_fine_tune_bert_on_uspto_1k_tpl.ipynb
@@ -13,16 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m W&B installed but not logged in.  Run `wandb login` or set the WANDB_API_KEY env variable.\n",
-      "This extension has only been tested with simpletransformers==0.34.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional\n",
     "import os\n",
@@ -44,7 +35,7 @@
    "source": [
     "## Track the training \n",
     "\n",
-    "Will be using wandb to keep track of our training. You can use the an account on [wandb](https://www.wandb.com) or create an own instance following the instruction in the [documentation](https://docs.wandb.com/self-hosted).\n",
+    "We will be using wandb to keep track of our training. You can use the an account on [wandb](https://www.wandb.com) or create an own instance following the instruction in the [documentation](https://docs.wandb.com/self-hosted).\n",
     "\n",
     "If you then create an `.env` file in the root folder and specify the `WANDB_API_KEY=` (and the `WANDB_BASE_URL=`), you can use dotenv to load those enviroment variables."
    ]
@@ -82,7 +73,76 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>canonical_rxn</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>61373</th>\n",
+       "      <td>C1CCOC1.CC(C)(C)OC(=O)NCC(=O)NCC(=O)O.CCCCCCCC...</td>\n",
+       "      <td>645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135235</th>\n",
+       "      <td>CCN(CC)CCOc1ccc(Cn2c3ccc(OC)cc3c3oc4cc(OCc5ccc...</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>434023</th>\n",
+       "      <td>CCN(C(C)C)C(C)C.CS(=O)(=O)Cl.C[C@@H]1CCC[C@H](...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188234</th>\n",
+       "      <td>CC(C)(C)[Si](C)(C)OCCn1ccc(N)n1.Cc1cccc(C)n1.C...</td>\n",
+       "      <td>795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406062</th>\n",
+       "      <td>CCOC(C)=O.CO.COc1cc(C(=O)O)c(Cl)cc1Br.C[Si](C)...</td>\n",
+       "      <td>195</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            canonical_rxn  labels\n",
+       "61373   C1CCOC1.CC(C)(C)OC(=O)NCC(=O)NCC(=O)O.CCCCCCCC...     645\n",
+       "135235  CCN(CC)CCOc1ccc(Cn2c3ccc(OC)cc3c3oc4cc(OCc5ccc...      23\n",
+       "434023  CCN(C(C)C)C(C)C.CS(=O)(=O)Cl.C[C@@H]1CCC[C@H](...       0\n",
+       "188234  CC(C)(C)[Si](C)(C)OCCn1ccc(N)n1.Cc1cccc(C)n1.C...     795\n",
+       "406062  CCOC(C)=O.CO.COc1cc(C(=O)O)c(Cl)cc1Br.C[Si](C)...     195"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# optional\n",
     "df = pd.read_csv('../data/uspto_1k_TPL/data_set/uspto_1k_TPL_train_valid.tsv.gzip', compression='gzip', sep='\\t', index_col=0)\n",
@@ -95,7 +155,7 @@
    "metadata": {},
    "source": [
     "## Make splits\n",
-    "The data was already shuffled. We take 10% as test set and a small validation set 604 reactions to keep track of the performance during training."
+    "The data was already shuffled. We take 10% as test set and a small validation set of 604 reactions to keep track of the performance during training."
    ]
   },
   {
@@ -157,7 +217,7 @@
    ],
    "source": [
     "# optional\n",
-    "model_path =  pkg_resources.resource_filename(\"rxnfp\", f\"models/transformers/bert_mlm_1k_tpl\")\n",
+    "model_path =  pkg_resources.resource_filename(\"rxnfp\", \"models/transformers/bert_mlm_1k_tpl\")\n",
     "model = SmilesClassificationModel(\"bert\", model_path, num_labels=len(final_train_df.labels.unique()), args=model_args, use_cuda=torch.cuda.is_available())\n"
    ]
   },
@@ -194,7 +254,7 @@
    ],
    "source": [
     "# optional\n",
-    "train_model_path =  pkg_resources.resource_filename(\"rxnfp\", f\"models/transformers/bert_class_1k_tpl\")\n",
+    "train_model_path =  pkg_resources.resource_filename(\"rxnfp\", \"models/transformers/bert_class_1k_tpl\")\n",
     "\n",
     "model = SmilesClassificationModel(\"bert\", train_model_path, use_cuda=torch.cuda.is_available())"
    ]
