set max transformers version

--- a/nbs/07_models.ipynb
+++ b/nbs/07_models.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "This extension has only been tested with simpletransformers==0.34.4\n"
+      "This extension has only been tested with simpletransformers==0.34.4 and transformers==2.11.0\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
     "\n",
     "try: \n",
     "    import simpletransformers\n",
-    "    logger.warning(\"This extension has only been tested with simpletransformers==0.34.4\")\n",
+    "    logger.warning(\"This extension has only been tested with simpletransformers==0.34.4 and transformers==2.11.0\")\n",
     "except ImportError:\n",
     "    raise ImportError('To use this extension, please install simpletransformers (tested with . \"pip install simpletransformers==0.34.4\"')\n"
    ]
