Updated publication and citation information

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -163,16 +163,18 @@
    "source": [
     "## Citation \n",
     "\n",
-    "Our work was first presented in the NeurIPS 2019 workshop for [Machine Learning and the Physical Sciences](https://ml4physicalsciences.github.io). The most recent version of our preprint can be found on [ChemRxiv](https://chemrxiv.org/articles/Data-Driven_Chemical_Reaction_Classification_with_Attention-Based_Neural_Networks/9897365).\n",
+    "Our work was first presented in the NeurIPS 2019 workshop for [Machine Learning and the Physical Sciences](https://ml4physicalsciences.github.io). And has been published after multiple updates in 2021 in [Nature Machine Intelligence (free access link)](http://rdcu.be/cenmd).\n",
     "\n",
     "```\n",
-    "@article{Schwaller2019rxnfp,\n",
-    "author = \"Philippe Schwaller and Daniel Probst and Alain C. Vaucher and Vishnu H Nair and David Kreutter and Teodoro Laino and Jean-Louis Reymond\",\n",
-    "title = \"{Mapping the Space of Chemical Reactions using Attention-Based Neural Networks}\",\n",
-    "year = \"2019\",\n",
-    "month = \"9\",\n",
-    "url = \"https://chemrxiv.org/articles/preprint/Data-Driven_Chemical_Reaction_Classification_with_Attention-Based_Neural_Networks/9897365\",\n",
-    "doi = \"10.26434/chemrxiv.9897365.v3\"\n",
+    "@article{schwaller2021mapping,\n",
+    "  title={Mapping the space of chemical reactions using attention-based neural networks},\n",
+    "  author={Schwaller, Philippe and Probst, Daniel and Vaucher, Alain C and Nair, Vishnu H and Kreutter, David and Laino, Teodoro and Reymond, Jean-Louis},\n",
+    "  journal={Nature Machine Intelligence},\n",
+    "  volume={3},\n",
+    "  number={2},\n",
+    "  pages={144--152},\n",
+    "  year={2021},\n",
+    "  publisher={Nature Publishing Group}\n",
     "}\n",
     "```\n",
     "\n",
