Make rxnfp work with more recent transformers / simpletransformers versions, refactor tokenizer

--- a/nbs/02_transformer_fingerprints.ipynb
+++ b/nbs/02_transformer_fingerprints.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,15 +50,13 @@
     "    FingerprintGenerator\n",
     ")\n",
     "from rxnfp.tokenization import (\n",
-    "    SmilesTokenizer,\n",
-    "    convert_reaction_to_valid_features,\n",
-    "    convert_reaction_to_valid_features_batch,\n",
+    "    SmilesTokenizer\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +69,7 @@
     "    def __init__(self, model: BertModel, tokenizer: SmilesTokenizer, force_no_cuda=False):\n",
     "        super(RXNBERTFingerprintGenerator).__init__()\n",
     "        self.model = model\n",
+    "        self.model.eval()\n",
     "        self.tokenizer = tokenizer\n",
     "        self.device = torch.device(\"cuda\" if (torch.cuda.is_available() and not force_no_cuda) else \"cpu\")\n",
     "\n",
@@ -81,31 +80,38 @@
     "        Args:\n",
     "            rxn_smiles (str): precursors>>products\n",
     "        \"\"\"\n",
-    "        bert_inputs = convert_reaction_to_valid_features(rxn_smiles, self.tokenizer)\n",
+    "        bert_inputs = self.tokenizer.encode_plus(rxn_smiles, \n",
+    "                                                max_length=self.model.config.max_position_embeddings, \n",
+    "                                                padding=True, truncation=True, return_tensors='pt').to(self.device)\n",
+    "\n",
+    "#         inputs = tokenizer.encode_plus(example_rxn,  truncation=False)\n",
+    "#         bert_inputs = tokenizer.pad(inputs, max_length=512,  return_tensors='pt', pad_to_multiple_of=512).to(self.device)\n",
     "        with torch.no_grad():\n",
-    "            output, _ = self.model(\n",
-    "                torch.tensor(bert_inputs.input_ids.astype(np.int64)).unsqueeze(0).to(self.device),\n",
-    "                torch.tensor(bert_inputs.input_mask.astype(np.int64)).unsqueeze(0).to(self.device),\n",
-    "                torch.tensor(bert_inputs.segment_ids.astype(np.int64)).unsqueeze(0).to(self.device),\n",
+    "            output = self.model(\n",
+    "                **bert_inputs\n",
+    "#                 bert_inputs['input_ids'].unsqueeze(0),\n",
+    "#                 bert_inputs['attention_mask'].unsqueeze(0),\n",
+    "#                 bert_inputs['token_type_ids'].unsqueeze(0)\n",
     "            )\n",
+    "            \n",
     "\n",
     "        # [CLS] token embeddings\n",
-    "        embeddings = output.squeeze()[0].cpu().numpy().tolist()\n",
+    "#         import pdb; pdb.set_trace()\n",
+    "        embeddings = output['last_hidden_state'].squeeze()[0].cpu().numpy().tolist()\n",
     "        return embeddings\n",
     "\n",
     "    def convert_batch(self, rxn_smiles_list: List[str]):\n",
-    "        bert_inputs = convert_reaction_to_valid_features_batch(\n",
-    "            rxn_smiles_list, self.tokenizer\n",
-    "        )\n",
+    "        bert_inputs = self.tokenizer.batch_encode_plus(rxn_smiles_list, \n",
+    "                                                       max_length=self.model.config.max_position_embeddings, \n",
+    "                                                       padding=True, truncation=True, return_tensors='pt').to(self.device)\n",
     "        with torch.no_grad():\n",
-    "            output, _ = self.model(\n",
-    "                torch.tensor(bert_inputs.input_ids.astype(np.int64)).to(self.device),\n",
-    "                torch.tensor(bert_inputs.input_mask.astype(np.int64)).to(self.device),\n",
-    "                torch.tensor(bert_inputs.segment_ids.astype(np.int64)).to(self.device),\n",
+    "            output = self.model(\n",
+    "                **bert_inputs\n",
     "            )\n",
+    "            \n",
     "\n",
     "        # [CLS] token embeddings in position 0\n",
-    "        embeddings = output[:, 0, :].cpu().numpy().tolist()\n",
+    "        embeddings = output['last_hidden_state'][:, 0, :].cpu().numpy().tolist()\n",
     "        return embeddings\n",
     "\n",
     "\n",
@@ -167,7 +173,7 @@
     "    model.to(device)\n",
     "\n",
     "    tokenizer = SmilesTokenizer(\n",
-    "        tokenizer_vocab_path, max_len=model.config.max_position_embeddings\n",
+    "        tokenizer_vocab_path\n",
     "    )\n",
     "    return model, tokenizer\n",
     "\n",
@@ -201,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +215,7 @@
      "output_type": "stream",
      "text": [
       "256\n",
-      "[-2.017495632171631, 1.7602037191390991, -1.3323537111282349, -1.109501838684082, 1.2254540920257568]\n"
+      "[-2.0174953937530518, 1.7602049112319946, -1.3323532342910767, -1.109501838684082, 1.2254544496536255]\n"
      ]
     }
    ],
@@ -234,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +288,6 @@
     "print(len(fp))\n",
     "print(fp[:5])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -296,6 +295,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
