--- a/nbs/03_generate_fingerprints.ipynb
+++ b/nbs/03_generate_fingerprints.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
     "%load_ext autoreload\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +144,7 @@
        "4  US06716851  COc1ccc(OC)c(N)c1.Cc1cc(Cl)nc(-c2ccccn2)n1>>CO...   test  "
       ]
      },
-     "execution_count": null,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,28 +159,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize fingerprint generator and convert reactions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cuda\n",
-    "model, tokenizer = get_default_model_and_tokenizer('bert_ft_10k_25s')\n",
-    "ft_10k_rxnfp_generator = RXNBERTFingerprintGenerator(model, tokenizer)\n",
-    "model, tokenizer = get_default_model_and_tokenizer('bert_ft')\n",
-    "ft_rxnfp_generator = RXNBERTFingerprintGenerator(model, tokenizer)\n",
-    "model, tokenizer = get_default_model_and_tokenizer('bert_pretrained')\n",
-    "pretrained_rxnfp_generator = RXNBERTFingerprintGenerator(model, tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### ft_10k model\n",
     "This model was fine tuned on 10k reactions from the Schneider data set.\n",
     "\n",
@@ -198,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6250/6250 [02:50<00:00, 36.70it/s]\n"
+      "100%|██████████| 6250/6250 [02:52<00:00, 36.31it/s]\n"
      ]
     },
     {
@@ -214,13 +183,16 @@
        "(50000, 256)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# cuda\n",
+    "model, tokenizer = get_default_model_and_tokenizer('bert_ft_10k_25s')\n",
+    "ft_10k_rxnfp_generator = RXNBERTFingerprintGenerator(model, tokenizer)\n",
+    "\n",
     "fps_ft_10k = generate_fingerprints(df.rxn.values.tolist(), ft_10k_rxnfp_generator, batch_size=8)\n",
     "np.savez_compressed('../data/fps_ft_10k', fps=fps_ft_10k)\n",
     "fps_ft_10k.shape"
@@ -276,6 +248,8 @@
    ],
    "source": [
     "# cuda\n",
+    "model, tokenizer = get_default_model_and_tokenizer('bert_pretrained')\n",
+    "pretrained_rxnfp_generator = RXNBERTFingerprintGenerator(model, tokenizer)\n",
     "fps_pretrained = generate_fingerprints(df.rxn.values.tolist(), pretrained_rxnfp_generator, batch_size=8)\n",
     "np.savez_compressed('../data/fps_pretrained', fps=fps_pretrained)\n",
     "fps_pretrained.shape"
@@ -290,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6250/6250 [02:54<00:00, 35.82it/s]\n"
+      "100%|██████████| 6250/6250 [00:56<00:00, 111.34it/s]\n"
      ]
     },
     {
@@ -306,17 +280,26 @@
        "(50000, 256)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# cuda\n",
+    "model, tokenizer = get_default_model_and_tokenizer('bert_ft')\n",
+    "ft_rxnfp_generator = RXNBERTFingerprintGenerator(model, tokenizer)\n",
     "fps_ft = generate_fingerprints(df.rxn.values.tolist(), ft_rxnfp_generator, batch_size=8)\n",
     "np.savez_compressed('../data/fps_ft', fps=fps_ft)\n",
     "fps_ft.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -324,6 +307,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
