--- a/nbs/08_training_smiles_language_model_from_scratch.ipynb
+++ b/nbs/08_training_smiles_language_model_from_scratch.ipynb
@@ -13,16 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m W&B installed but not logged in.  Run `wandb login` or set the WANDB_API_KEY env variable.\n",
-      "This extension has only been tested with simpletransformers==0.34.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional\n",
     "import os\n",
@@ -51,20 +42,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional\n",
+    "# !pip install python-dotenv\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "load_dotenv(find_dotenv())"
    ]
@@ -82,7 +63,7 @@
     "To make it work you will have to install simpletransformers:\n",
     "\n",
     "```bash\n",
-    "pip install simpletransformers==0.34.4\n",
+    "pip install simpletransformers\n",
     "```"
    ]
   },
@@ -132,16 +113,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting 'max_len_single_sentence' is now deprecated. This value is automatically set up.\n",
-      "Setting 'max_len_sentences_pair' is now deprecated. This value is automatically set up.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional\n",
     "model = SmilesLanguageModelingModel(model_type='bert', model_name=None, args=args)"
@@ -154,10 +126,18 @@
    "outputs": [],
    "source": [
     "# optional\n",
+    "# !unzip ../data/uspto_1k_TPL/individual_files/mlm_training.zip -d ../data/uspto_1k_TPL/individual_files/\n",
     "train_file = '../data/uspto_1k_TPL/individual_files/mlm_train_file.txt'\n",
     "eval_file = '../data/uspto_1k_TPL/individual_files/mlm_eval_file_1k.txt'\n",
     "model.train_model(train_file=train_file, eval_file=eval_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -165,6 +145,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
