--- a/nbs/09_fine_tune_bert_on_uspto_1k_tpl.ipynb
+++ b/nbs/09_fine_tune_bert_on_uspto_1k_tpl.ipynb
@@ -44,18 +44,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional\n",
     "from dotenv import load_dotenv, find_dotenv\n",
@@ -73,76 +62,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>canonical_rxn</th>\n",
-       "      <th>labels</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>61373</th>\n",
-       "      <td>C1CCOC1.CC(C)(C)OC(=O)NCC(=O)NCC(=O)O.CCCCCCCC...</td>\n",
-       "      <td>645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135235</th>\n",
-       "      <td>CCN(CC)CCOc1ccc(Cn2c3ccc(OC)cc3c3oc4cc(OCc5ccc...</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>434023</th>\n",
-       "      <td>CCN(C(C)C)C(C)C.CS(=O)(=O)Cl.C[C@@H]1CCC[C@H](...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188234</th>\n",
-       "      <td>CC(C)(C)[Si](C)(C)OCCn1ccc(N)n1.Cc1cccc(C)n1.C...</td>\n",
-       "      <td>795</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>406062</th>\n",
-       "      <td>CCOC(C)=O.CO.COc1cc(C(=O)O)c(Cl)cc1Br.C[Si](C)...</td>\n",
-       "      <td>195</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            canonical_rxn  labels\n",
-       "61373   C1CCOC1.CC(C)(C)OC(=O)NCC(=O)NCC(=O)O.CCCCCCCC...     645\n",
-       "135235  CCN(CC)CCOc1ccc(Cn2c3ccc(OC)cc3c3oc4cc(OCc5ccc...      23\n",
-       "434023  CCN(C(C)C)C(C)C.CS(=O)(=O)Cl.C[C@@H]1CCC[C@H](...       0\n",
-       "188234  CC(C)(C)[Si](C)(C)OCCn1ccc(N)n1.Cc1cccc(C)n1.C...     795\n",
-       "406062  CCOC(C)=O.CO.COc1cc(C(=O)O)c(Cl)cc1Br.C[Si](C)...     195"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional\n",
     "df = pd.read_csv('../data/uspto_1k_TPL/data_set/uspto_1k_TPL_train_valid.tsv.gzip', compression='gzip', sep='\\t', index_col=0)\n",
@@ -169,10 +89,19 @@
     "eval_df = df[['canonical_rxn', 'labels']].iloc[400000:400604]\n",
     "eval_df.columns = ['text', 'labels']\n",
     "\n",
-    "all_train_reactions = train_df.canonical_rxn_with_fragment_info.values.tolist() + train_df.canonical_rxn.values.tolist()\n",
-    "corresponding_labels = train_df.labels.values.tolist() + train_df.labels.values.tolist()\n",
+    "all_train_reactions = train_df.canonical_rxn_with_fragment_info[train_df.canonical_rxn_with_fragment_info!=train_df.canonical_rxn].values.tolist() + train_df.canonical_rxn.values.tolist()\n",
+    "corresponding_labels = train_df[train_df.canonical_rxn_with_fragment_info!=train_df.canonical_rxn].labels.values.tolist() + train_df.labels.values.tolist()\n",
     "final_train_df = pd.DataFrame({'text': all_train_reactions, 'labels': corresponding_labels })\n",
     "final_train_df = final_train_df.sample(frac=1., random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_train_df.shape"
    ]
   },
   {
@@ -198,27 +127,9 @@
     "    'regression': False, \"num_labels\":  len(final_train_df.labels.unique()), \"fp16\": False,\n",
     "    \"evaluate_during_training\": True, 'manual_seed': 42,\n",
     "    \"max_seq_length\": 512, \"train_batch_size\": 8,\"warmup_ratio\": 0.00,\n",
-    "    'output_dir': '../out/bert_class_1k_tpl'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting 'max_len_single_sentence' is now deprecated. This value is automatically set up.\n",
-      "Setting 'max_len_sentences_pair' is now deprecated. This value is automatically set up.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# optional\n",
-    "model_path =  pkg_resources.resource_filename(\"rxnfp\", \"models/transformers/bert_mlm_1k_tpl\")\n",
-    "model = SmilesClassificationModel(\"bert\", model_path, num_labels=len(final_train_df.labels.unique()), args=model_args, use_cuda=torch.cuda.is_available())\n"
+    "    'output_dir': '../out/bert_class_1k_tpl', \n",
+    "    'thread_count': 8,\n",
+    "    }"
    ]
   },
   {
@@ -228,7 +139,11 @@
    "outputs": [],
    "source": [
     "# optional\n",
-    "model.train_model(final_train_df, eval_df=eval_df, acc=sklearn.metrics.accuracy_score, mcc=sklearn.metrics.matthews_corrcoef)"
+    "model_path =  pkg_resources.resource_filename(\"rxnfp\", \"models/transformers/bert_mlm_1k_tpl\")\n",
+    "model = SmilesClassificationModel(\"bert\", model_path, num_labels=len(final_train_df.labels.unique()), args=model_args, use_cuda=torch.cuda.is_available())\n",
+    "model.train_model(final_train_df, eval_df=eval_df, acc=sklearn.metrics.accuracy_score, mcc=sklearn.metrics.matthews_corrcoef)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -242,16 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting 'max_len_single_sentence' is now deprecated. This value is automatically set up.\n",
-      "Setting 'max_len_sentences_pair' is now deprecated. This value is automatically set up.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional\n",
     "train_model_path =  pkg_resources.resource_filename(\"rxnfp\", \"models/transformers/bert_class_1k_tpl\")\n",
@@ -270,50 +176,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "883b4728cf644695a49d68f1978a59aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=44511.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82b1c9219c5149d0b644c19c0c18bbc0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=5564.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional\n",
     "y_preds = model.predict(test_df.text.values)"
@@ -325,6 +188,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
