--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -30,7 +30,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "For all installations, we recommend using `conda` to get the necessary `rdkit` and `tmap` dependencies:\n",
     "\n",
     "### From pypi\n",
@@ -194,6 +193,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
