--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -177,7 +177,11 @@
     "}\n",
     "```\n",
     "\n",
-    "RXNFP has been developed in a collaboration between IBM Research Europe and the [Reymond group](http://gdb.unibe.ch) at the University of Bern. The classification models are used on the [RXN for Chemistry](https://rxn.res.ibm.com) platform."
+    "RXNFP has been developed in a collaboration between IBM Research Europe and the [Reymond group](http://gdb.unibe.ch) at the University of Bern. The classification models are used on the [RXN for Chemistry](https://rxn.res.ibm.com) platform.\n",
+    "\n",
+    "Our publication is part of the Nature Portfolio [\"Synthesis and enabling technologies\" collection](https://www.nature.com/collections/ijabjccjec) and was featured in a News & Views on [Transformers for future medicinal chemists](https://www.nature.com/articles/s42256-021-00299-x). \n",
+    "\n",
+    "Moreover, the `rxnfp` code was reused to train new models on different data as described in [Reusability report: Learning the language of synthetic methods used in medicinal chemistry](https://www.nature.com/articles/s42256-021-00367-2)."
    ]
   },
   {
